생활정보[주거&취업]완료

--- a/team_pj_lingo/src/main/webapp/resources/css/member/login.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/member/login.css
@@ -247,3 +247,17 @@
 .inputButton:active {
    background-color: #0de7f9;
 }
+
+.board_table th{
+	border-radius: 5px;
+	font-size: 16px;
+   font-weight: bold;
+   width: 50%;
+}
+
+.board_table td{
+	border-radius: 5px;
+	width: 50%;
+    text-decoration: underline #06BBCC;
+    
+}
