--- a/team_pj_lingo/src/main/webapp/resources/css/common/footer.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/common/footer.css
@@ -434,6 +434,7 @@
     padding: 0; 
     background-color: #000; 
     box-sizing: border-box; 
+    clear: both; /* 또는 left, right 등 적절한 값 */
 }
 
 .footer .btn.btn-link:hover {
