--- a/team_pj_lingo/src/main/webapp/resources/css/admin/adminList.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/admin/adminList.css
@@ -4,11 +4,12 @@
 #adminView { /* 테이블이 로드되는 영역 */
   display: flex;
   justify-content: center; /* 가로 가운데 정렬 */
-  align-items: center; /* 세로 가운데 정렬 */
-  height:600px;
+  align-items: flex-start; /* 세로 가운데 정렬 */
+  height:max-content;
+  min-height: 500px;
 }
 
-#adminBtn{
+#admin{
 	display: flex;
   	justify-content: center;
 	
