아이디,비번찾기 진행중

--- a/team_pj_lingo/src/main/webapp/resources/css/member/login.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/member/login.css
@@ -261,3 +261,9 @@
     text-decoration: underline #06BBCC;
     
 }
+
+.join button {
+   border: none;
+   background-color: white;
+   font-size: 14px;
+}
