[Admin] 관리자페이지 목록 수정 / 게시글 신고등록/신고목록/신고된 게시글 & 게시글 신고내용 삭제 작업완료

--- a/team_pj_lingo/src/main/webapp/resources/css/admin/adminList.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/admin/adminList.css
@@ -12,5 +12,7 @@
 #admin{
 	display: flex;
   	justify-content: center;
+  	width: 100%; /* 부모 요소의 전체 너비 차지 */
+    box-sizing: border-box; /* padding, border를 width에 포함 */
 	
 }
