알림마당 수정완료, 검색 80%완성

--- a/team_pj_lingo/src/main/webapp/resources/css/common/board.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/common/board.css
@@ -24,6 +24,15 @@
     gap: 30px;
 }
 
+.search {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    align-items: baseline;
+}
 #left {
     width: 20%;
     margin-top: 20px;
