--- a/team_pj_lingo/src/main/webapp/resources/css/board/boardInsert.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/board/boardInsert.css
@@ -11,22 +11,34 @@
     min-width: 1100px;
     width: 100%;
     margin: 0 auto;
-    min-height: 800px;
+    height: 640px;
     background-color: #FFFFFF;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#section1 {
+   border-bottom: 5px solid #06BBCC; 
+   background-color: #FFFFFF;
+   border-radius: 10px;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 #section2 {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    gap: 20px;
+    margin-top: 10px !important;
+   padding: 47px;
+   border-bottom: 5px solid #06BBCC; 
+   background-color: #FFFFFF;
+   border-radius: 10px;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 #left {
     width: 20%;
-    margin-top: 20px;
+    margin-top: 1px;
     height: 100%;
     border-radius: 10px;
     margin-right: 30px;
@@ -66,7 +78,6 @@
 
 #right {
     width: 100%;
-    padding: 0 20px;
     margin-top: 10px;
 }
 
@@ -92,7 +103,7 @@
 
 .table_div table th, 
 .table_div table td {
-    height: 50px !important;
+    height: 70px !important;
     border: 1px solid #DDD !important;
     padding: 0 10px !important;
     text-align: center !important;
@@ -102,8 +113,8 @@
 
 .input {
     width: 100%;
-    max-width: 550px;
-    height: 45px;
+    max-width: 790px;
+    height: 35px;
     border: 1px solid #CCC;
     padding: 0 15px;
     font-size: 16px;
@@ -147,4 +158,11 @@
     background-color: #F6F6F6;
     color: #333;
     transition: background-color 0.3s ease;	
+    height: 150px; 
+}
+
+.textarea:focus {
+    border-color: #0056A4;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 86, 164, 0.5);
 }
