--- a/team_pj_lingo/src/main/webapp/resources/css/common/madang.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/common/madang.css
@@ -1,3 +1,4 @@
+    margin-left: auto;
 @charset "UTF-8";
 
 /* side menu start */
@@ -14,6 +15,7 @@
     /* position: absolute; */
     top: 670px;
     list-style: none;
+    
 }
 
 /* 화면 너비가 1646px 이하일 때 #side_menu 숨기기 */
@@ -23,7 +25,7 @@
     }
 }
 
-#side_menu > ul > li {
+#side_menu > ul > li {	
 	
     list-style: none;
     padding: 10px 0; /* 상하 패딩 조정 */
@@ -53,7 +55,6 @@
 .menu {
     display: flex;
     justify-content: space-between; /* 박스 사이의 간격을 균등하게 분배 */
-    width: 100%; /* 전체 너비를 아래의 박스와 일치시킴 */
     height: 80px;
     background-color: #f8f8f8; /* 메뉴바 배경색 */
     border-bottom: 1px solid #c2c2c2; /* 메뉴바 아래 경계선 */
@@ -63,6 +64,8 @@
     align-items: center; /* 수직 가운데 정렬 */
   	justify-content: center; /* 수평 가운데 정렬 */
   	font-size: 20px;
+  	margin-left: 60px;
+  	
 }
 
 .menu a {
@@ -90,7 +93,7 @@
 
 #container {
    width: 100%;
-    height: 100vh;
+   height: 100vh;
    margin: 0 auto;
    background-color: #F6F6F6;
    font-family: 'Arial', sans-serif;
@@ -100,29 +103,37 @@
    max-width: auto;
    min-width: auto;
    width: 100%;
-   margin: 0 auto;
-   padding: 20px;
+   padding: 10px;
 }
 
 #section1, #section2 {
-   padding: 30px;
+   padding: 80px;
    border-bottom: 5px solid #06BBCC; 
    background-color: #FFFFFF;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+#section2 {
+height: auto;
+min-height: 800px;
+
+}
+
 #s2_inner {
    width: 100%;
+   margin-left: 60px;	
+   width: 95%;
 }
 
 .join {
+	width: 100%;
    display: flex;
    justify-content: center; /* 유연한 정렬 */
    align-items: center;
    max-width: 1500px;
-   margin: 40px auto;
-   padding: 20px;
+   margin: 20px auto;
+   padding: 10px;
    background-color: #FFFFFF;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -142,7 +153,7 @@
 }
 
 .join td {
-   padding: 10px 20px;
+   padding: 20px 10px;
    border-bottom: 2px solid #DDD;
    background-color: #FFFFFF;
 }
@@ -182,9 +193,6 @@
    background-color: #0de7f9;
 }
 
-#freeCommentList {
-	border-line: right;
-}
 /* 자주 묻는 질문 리스트 - 아코디언 */
 .accordion {
   // scss-docs-start accordion-css-vars
