--- a/team_pj_lingo/src/main/webapp/resources/css/member/login.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/member/login.css
@@ -1,95 +1,5 @@
 @charset "UTF-8";
 
-/* side menu start */
-#side_menu {
-    float: inline-start;
-    padding: 20px;
-    width: 300px; 
-    text-align: center;
-    border-top: 5px solid #06BBCC;
-    border-bottom: 5px solid #06BBCC;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 670px;
-    list-style: none;
-}
-
-/* 화면 너비가 1646px 이하일 때 #side_menu 숨기기 */
-@media (max-width: 1646px) {
-    #side_menu {
-        display: none;
-    }
-}
-
-#side_menu > ul > li {
-	
-    list-style: none;
-    padding: 10px 0; /* 상하 패딩 조정 */
-    width: 100%; /* 너비를 100%로 설정 */
-}
-
-#side_menu > ul > li > a {
-	font-weight: bold;
-    display: block;
-    padding: 15px; /* 패딩 조정 */
-    border-bottom: 1px solid #06BBCC;
-    background-color: #f8f9fa; /* 배경색 조정 */
-    color: #333; /* 글자색 조정 */
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
-    margin-bottom: 10px;
-}
-
-#side_menu > ul > li > a:hover {
-    background-color: #06BBCC; /* 호버 시 배경색 변경 */
-    color: #FFFFFF; /* 호버 시 글자색 변경 */
-}
-/* side menu end */
-
-
-/* menu 클래스 스타일 */
-.menu {
-    display: flex;
-    justify-content: space-between; /* 박스 사이의 간격을 균등하게 분배 */
-    width: 100%; /* 전체 너비를 아래의 박스와 일치시킴 */
-    height: 80px;
-    background-color: #f8f8f8; /* 메뉴바 배경색 */
-    border-bottom: 1px solid #c2c2c2; /* 메뉴바 아래 경계선 */
-    border-top: 1px solid #c2c2c2; 
-    border-left: 1px solid #c2c2c2; 
-    border-right: 1px solid #c2c2c2; 
-    align-items: center; /* 수직 가운데 정렬 */
-  	justify-content: center; /* 수평 가운데 정렬 */
-  	font-size: 20px;
-}
-
-.menu a {
-    flex: 1; /* 모든 링크가 동일한 너비를 가지도록 설정 */
-    padding: 22px 0; /* 상하 패딩 추가 */
-    text-decoration: none;
-    color: #333;
-    background-color: #f8f9fa;
-    border-right: 1px solid #c2c2c2; /* 박스 사이의 경계선 */
-    text-align: center; /* 텍스트 가운데 정렬 */
-    transition: background-color 0.3s;
-    font-weight: bold; /* 글자 두께 */
-    
-}
-
-.menu a:last-child {
-    border-right: none; /* 마지막 박스의 오른쪽 경계선 제거 */
-}
-
-.menu a:hover {
-    background-color: #06BBCC; /* 호버 시 배경색 변경 */
-    color: #ffffff; /* 호버 시 글자색 변경 */
-}
-/* menu 클래스 스타일 끝*/
-
-
-
 /* HTML 폰드 스타일 시작 */
 .content {
         margin: 0 auto;
@@ -156,7 +66,7 @@
 
 #container {
    width: 100%;
-    height: 100vh;
+   height: auto !important;
    margin: 0 auto;
    background-color: #F6F6F6;
    font-family: 'Arial', sans-serif;
@@ -165,13 +75,12 @@
 #contents {
    max-width: auto;
    min-width: auto;
-   width: 100%;
+   width: 50%;
    margin: 0 auto;
-   padding: 20px;
 }
 
 #section1, #section2 {
-   padding: 80px;
+   padding: 40px;
    border-bottom: 5px solid #06BBCC; 
    background-color: #FFFFFF;
    border-radius: 10px;
