--- a/team_pj_lingo/src/main/webapp/resources/css/shareInfo/life.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/shareInfo/life.css
@@ -154,13 +154,12 @@
     
 /* HTML 폰드 스타일 끝 */
 
-.container {
-   
-   border-top: 5px solid #06BBCC; 
-   background-color: #FFFFFF;
-   border-radius: 10px;
-   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-   
+#container {
+   width: 100%;
+    height: 100vh;
+   margin: 0 auto;
+   background-color: #F6F6F6;
+   font-family: 'Arial', sans-serif;
 }
 
 #contents {
@@ -171,14 +170,13 @@
    padding: 20px;
 }
 
-#section2 {
-   padding: 40px;
+#section1, #section2 {
+   padding: 80px;
    border-bottom: 5px solid #06BBCC; 
    background-color: #FFFFFF;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
 
 #s2_inner {
    width: 100%;
@@ -264,3 +262,8 @@
     
 }
 
+.join button {
+   border: none;
+   background-color: white;
+   font-size: 14px;
+}
