--- a/team_pj_lingo/src/main/webapp/resources/css/board/boardDetail.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/board/boardDetail.css
@@ -7,8 +7,6 @@
 }
 
 #contents {
-    max-width: 1100px;
-    min-width: 1100px;
     width: 100%;
     margin: 0 auto;
     min-height: 800px;
@@ -18,6 +16,7 @@
 }
 
 #section1 {
+	width: 100%;
    border-bottom: 5px solid #06BBCC; 
    background-color: #FFFFFF;
    border-radius: 10px;
@@ -25,6 +24,8 @@
 }
 
 #section2 {
+	margin-left: 500px;
+	margin-right: 500px;
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
