--- a/team_pj_lingo/src/main/webapp/resources/css/board/boardInsert.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/board/boardInsert.css
@@ -2,20 +2,22 @@
 
 #container {
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     background-color: #F6F6F6;
 }
 
 #contents {
-    max-width: 1100px;
     min-width: 1100px;
     width: 100%;
     margin: 0 auto;
-    height: 640px;
+    height: 100%;
     background-color: #FFFFFF;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+
 
 #section1 {
    border-bottom: 5px solid #06BBCC; 
@@ -83,7 +85,8 @@
 
 .table_div {
     margin-top: 10px;
-    
+    margin-left: 500px;
+    margin-right: 500px;
 }
 
 .table_div table {
