--- a/team_pj_lingo/src/main/webapp/resources/css/common/madang.css
+++ b/team_pj_lingo/src/main/webapp/resources/css/common/madang.css
@@ -1,4 +1,3 @@
-    margin-left: auto;
 @charset "UTF-8";
 
 /* side menu start */
@@ -107,7 +106,7 @@
 }
 
 #section1, #section2 {
-   padding: 80px;
+   padding: 30px;
    border-bottom: 5px solid #06BBCC; 
    background-color: #FFFFFF;
    border-radius: 10px;
@@ -294,3 +293,6 @@ min-height: 800px;
   padding: var(--#{$prefix}accordion-body-padding-y) var(--#{$prefix}accordion-body-padding-x);
 }
 
+#freeCommentList {
+	border-line: right;
+}
